fixed align

--- a/includes/style.css
+++ b/includes/style.css
@@ -253,9 +253,6 @@ iframe {
 	color:#000000;
 	text-decoration:none;
 }
-.labelAdj {
-	padding-right:12px;
-}
 .next {
 	display:block;
 	position: absolute;
